Expose the total_shards_per_node cluster.routing.allocation setting